# rustlings

./: Cargo.toml
exercises/: quiz1.rs  quiz4.rs
exercises/clippy/: clippy1.rs
exercises/collections/: hashmap1.rs  hashmap2.rs
exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
exercises/enums/: enums2.rs  enums3.rs
exercises/if/: if1.rs
exercises/option/: option1.rs  option2.rs
exercises/primitive_types/: primitive_types2.rs
exercises/standard_library_types/: box1.rs  iterators1.rs  iterators2.rs  iterators3.rs  iterators5.rs
exercises/structs/: structs3.rs
exercises/traits/: traits2.rs
