[package]
name = "rustlings"
version = "4.4.0"
authors = ["Marisa <mokou@posteo.de>", "Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
edition = "2018"

[dependencies]
argh = "0.1.4"
indicatif = "0.15.0"
console = "0.14.1"
notify = "4.0.15"
toml = "0.5.8"
regex = "1.1.6"
serde = {version = "1.0.10", features = ["derive"]}

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.1"
glob = "0.3.0"
